infra/k8s-local/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coll-c07e5a4d5b2a49498837750c910363e2-depl
  labels:
    app: coll-c07e5a4d5b2a49498837750c910363e2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coll-c07e5a4d5b2a49498837750c910363e2
  template:
    metadata:
      labels:
        app: coll-c07e5a4d5b2a49498837750c910363e2
    spec:
      containers:
      - name: coll-c07e5a4d5b2a49498837750c910363e2
        image: coll-c07e5a4d5b2a49498837750c910363e2:local
        imagePullPolicy: Never
        ports:
        - containerPort: 7070
          name: http
        - containerPort: 7070
          name: metrics
